unpackaged/main/default/objects/Fund__c/fields/Available_to_Spend__c.field-meta.xml
<CustomField>
    <fullName>Available_to_Spend__c</fullName>
    <formula>Grant_Revenue__c - Grant_Expenses__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Available to Spend</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>