unpackaged/main/default/objects/Fund__c/fields/Fund_Code__c.field-meta.xml
<CustomField>
    <fullName>Fund_Code__c</fullName>
    <formula>MID( Name ,FIND(&quot;(&quot;,Name,1)+1,LEN(Name)-FIND(&quot;(&quot;,Name,1)-1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fund Code</label>
    <type>Text</type>
</CustomField>