unpackaged/main/default/objects/Fund__c/fields/Fund_Description__c.field-meta.xml
<CustomField>
    <fullName>Fund_Description__c</fullName>
    <formula>LEFT(Name,FIND(&quot;(&quot;,Name,1)-2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fund Description</label>
    <type>Text</type>
</CustomField>