unpackaged/main/default/objects/Fund__c/fields/Grant_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Grant_Expenses__c</fullName>
    <label>Grant Expenses</label>
    <summarizedField>Fund_Allocation__c.Grant_Expenses__c</summarizedField>
    <summaryForeignKey>Fund_Allocation__c.Fund__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>