unpackaged/main/default/objects/Fund__c/fields/Grant_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Grant_Revenue__c</fullName>
    <label>Grant Revenue</label>
    <summarizedField>Fund_Allocation__c.Amount__c</summarizedField>
    <summaryForeignKey>Fund_Allocation__c.Fund__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>